PAGOPA-1745 fixing comments